--- a/mainPage.css
+++ b/mainPage.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700;800&display=swap');
 
-:root{
+
+:root {
     font-family: 'Montserrat', sans-serif;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -10,165 +11,169 @@
     overflow-x: hidden;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    min-width: 900px;
 }
+
 :root::-webkit-scrollbar {
     display: none;
 }
-#first-page{
+
+body {
+    margin: 0;
+}
+
+/* first page CSS */
+#first-page {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     height: 100vh;
 }
 
-#logo-line{
+#logo-line {
     display: flex;
-    align-items: center;
+    height: 10vh;
     margin: 0;
 }
-#acorn-wrapper{
+
+#acorn-wrapper {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 13%;
-    height: 13%;
-    margin-top: 9%;
+    min-width: 123px;
+    max-width: 10vw;
+    flex-shrink: 0;
     position: relative;
-    left: 43%;
-    opacity: 0;
-    transition: left 700ms ease 600ms, opacity 300ms ease 100ms;
+    left: calc(50% - 5vw);
+    transition: left 700ms ease;
+
 }
 
-#title{
-    font-size: 10rem;
+#title {
+    display: flex;
+    align-items: center;
+    font-size: 5rem;
     font-weight: bold;
-    margin-top: 10%;
-    height: 10rem;
 }
-#subtitle{
-    font-size: 1.3rem;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 1%;
-    
 
-}
-#slogan{
+#subtitle {
     opacity: 0;
-    margin-top: 6%;
     transition: opacity 1000ms ease 2300ms;
-}
-
-
-#scroll-bar{
-    --height: 100px;
-    position: fixed;
-    height: var(--height);
-    width: 90px;
-    top: 90vh;
-    left: 3vw;
-    transform: translateY(calc(-1 * var(--height)));
-    background-color: salmon;
-    display: flex;
-    justify-content: center;
-    border-radius: 50px;
-    min-height: 100px;
-    box-shadow: inset 0 0 5px black;
-    --top: 500px;
-
 
 }
-#scroll-bar::after{
-    content: "";
-    width: 100%;
-    height: 10%;
-    position: absolute;
-    z-index: -1;
-    top: var(--top);
-    left: 0;
-    box-shadow: 0 0 0px rgb(153, 75, 67);
-    transition: box-shadow 500ms;
-}
-#scroll-bar:hover::after{
-    box-shadow: 0 0 10px rgb(153, 75, 67);
-}
-.arrow{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    border-radius : 50%;
-    box-shadow: 0 0 7px black;
-    background-color: #f5f5f5;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 4rem;
-    cursor: pointer;
-    transition: box-shadow 300ms ease;
-}
-.arrow:hover{
-    box-shadow: 0 0 12px black;
-}
-.arrow::after{
-    content: "";
-    border: solid black;
-    border-width: 0 10px 10px 0;
-    display: inline-block;
-    padding: 10px;
-    transform: rotate(var(--rotate));
-    -webkit-transform: rotate(var(--rotate));
-}
-#up-arr{
-    top: 0%;
 
-    z-index: 0;
-}
-#down-arr{
-    bottom: 0%;
-    z-index: 2
-}
-@keyframes move-in {
-    0%{
-        width: 70%;
+@media screen and (min-width: 1200px) {
+    #title {
+        font-size: 7rem;
     }
-    100%{
-        width: 25%;
+
+    #subtitle {
+        font-size: 1.2rem;
+        margin-top: 2%;
     }
 }
 
- #second-page{
+@media screen and (min-width: 1700px) {
+    #title {
+        font-size: 10rem;
+    }
+
+    #subtitle {
+        font-size: 1.5rem;
+        margin-top: 4%;
+    }
+
+}
+
+
+
+
+
+/* seocnd page CSS */
+
+#second-page {
     display: grid;
-    padding-left: 13%;
-    grid-template-columns: repeat(3, 28%);
-    grid-template-rows: repeat(3, 15vw);
+    padding-left: 20%;
+    grid-template-columns: repeat(2, 40%);
+    grid-template-rows: repeat(4, 15vw);
     align-items: center;
+    align-content: center;
     justify-items: center;
+    height: 100vh;
+    min-height: 1000px;
+    grid-gap: 5vw;
 }
 
-
-.gridling{
-    position: relative;
-    grid-row: var(--row);
-    grid-column: var(--col);
+.gridling {
+    --rowx: var(--row);
+    --colx: var(--col);
+    --scaleVal: 0;
+    grid-row: var(--rowx);
+    grid-column: var(--colx);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.gridling::before{
+
+.gridling::before {
     content: "";
-    width: 11vw;
-    height: 11vw;
+    width: 16vw;
+    height: 16vw;
     position: absolute;
-    top: 0%;
-    left: 0%;
     background-color: rgb(241, 205, 1);
     border-radius: 10px;
-    animation: rotate 10000ms ease-in infinite;
+    animation: rotate 10000ms ease-in-out infinite;
 }
-.diamond{
+#test-grid::before{
+    animation-delay: 70ms;
+}
+#tiktok-grid::before {
+    animation-delay: 140ms;
+}
+#ceo-grid::before {
+    animation-delay: 210ms;
+}
+
+.gridling::after {
+    content: "";
+    position: absolute;
+    background-color: rgb(100, 155, 226);
+    border: 3px solid white;
+    opacity: var(--opacity);
+    border-radius: 30px;
+    width: 300vw;
+    height: 150px;
+    z-index: -1;
+    transition: transform 1000ms;
+
+}
+
+#campus-grid::after {
+    transform: rotate(-10deg) scaleX(var(--scaleVal));
+    top: 117vh;
+}
+
+#test-grid::after {
+    transform: rotate(10deg) scaleX(var(--scaleVal));
+    top: 137vh;
+}
+
+#ceo-grid::after {
+    transform: rotate(-15deg) scaleX(var(--scaleVal));
+    top: 158vh;
+}
+
+#tiktok-grid::after {
+    transform: rotate(5deg) scaleX(var(--scaleVal));
+    top: 179vh;
+}
+
+.diamond {
     width: 10vw;
     height: 10vw;
     position: relative;
-    transform: rotate(45deg);
+    transform: rotate(45deg) scale(1.4);
     overflow: hidden;
     position: relative;
     border: 10px solid rgba(243, 208, 11, 0.932);
@@ -177,7 +182,7 @@
 
 }
 
-.diamond::after{
+.diamond::after {
     content: "";
     display: block;
     background: var(--image) no-repeat center center/cover;
@@ -187,146 +192,173 @@
     transform: rotate(-45deg) scale(var(--scale));
     top: var(--topShift);
     left: var(--leftShift);
- 
+
 }
 
-
-
-.paragraph{
+.paragraph {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.2rem;
     width: 100%;
-    grid-row: var(--row);
-    grid-column: var(--col);
+    --rowx: var(--row);
+    --colx: var(--col);
+    grid-row: var(--rowx);
+    grid-column: var(--colx);
     position: relative;
     --scale: 0;
-
-
-}
-.paragraph::after{
-    content: "";
-    position: absolute;
-    background-color: rgb(100, 155, 226);
-    border: 3px solid white;
-    opacity: var(--opacity);
-    border-radius: 30px;
-
-}
-#p1::after{
-    z-index: -4;
-    width: 70vw;
-    height: 10vw;
-    transform: rotate(65deg) scaleX(var(--scale));
-    top: 170%;
-    left: -70%;
-    transition: transform 700ms;
-
-}
-
-#p2::after{
-    z-index: -1;
-    width: 70vw;
-    height: 10vw;
-    transform: rotate(105deg) scaleX(var(--scale));
-    top: -80%;
-    left: -200%;
-    border-radius: 30px;
-    transition: transform 700ms 600ms;
-
-}
-
-#p2::before{
-    content: "";
-    z-index: -1;
-    position: absolute;
-    width: 120vw;
-    height: 10vw;
-    transform: rotate(-20deg) scaleX(var(--scale));
-    background-color: rgb(100, 155, 226);
-    top: -380%;
-    left: -200%;
-    opacity: var(--opacity);
-    border-radius: 30px;
-    transition: transform 700ms 200ms;
-    border: 3px solid white;
-
-}
-#p3::after{
-    z-index: -2;
-    width: 110vw;
-    height: 10vw;
-    transform: rotate(-5deg) scaleX(var(--scale));
-    top: 0%;
-    left: -270%;
-    transition: transform 700ms 400ms;
+    background-color: white;
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 0 0 3px black;
+    font-size: .8rem;
 }
 
 @keyframes rotate {
-    0%{
+    0% {
         transform: rotate(0deg);
     }
-    12%{
-        transform: rotate(90deg);
+
+    5% {
+        transform: rotate(360deg);
     }
-    100%{
-        transform: rotate(90deg);
+
+    100% {
+        transform: rotate(360deg);
 
     }
 }
 
-#third-page{
-    height: 90vh;
+
+@media screen and (min-width: 1200px) {
+
+    #second-page {
+        padding-left: 13%;
+        grid-template-columns: repeat(3, 28%);
+        grid-template-rows: repeat(3, 15vw);
+        grid-gap: 0;
+    }
+
+    .gridling,
+    .paragraph {
+        --colx: calc(var(--col) + 1)
+    }
+
+    .gridling::before {
+        width: 12vw;
+        height: 12vw;
+    }
+
+    .diamond {
+        transform: rotate(45deg) scale(1);
+    }
+
+    #ceo-grid {
+        --rowx: 2;
+        --colx: 1;
+    }
+
+    #tiktok-grid {
+        --rowx: 3;
+        --colx: 2;
+    }
+
+    #campus-grid::after {
+        top: 110vh;
+    }
+
+    .paragraph {
+        font-size: 1rem;
+
+    }
+
+
+}
+
+@media screen and (min-width: 1700px) {
+    .paragraph {
+        font-size: 1.2rem;
+        padding: 25px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* third page CSS */
+
+#third-page {
+    height: 100vh;
     display: flex;
     justify-content: space-between;
-    padding-top: 10%;
-    margin-left: 20%;
-    margin-right: 9%;
+    padding-left: 20%;
+
 }
-#donation-bar{
+
+#donation-bar {
     width: 15vw;
-    height: 90%;
+    margin-top: 10vh;
+    height: 85%;
     border: 5px solid black;
     text-align: center;
     position: relative;
     border-radius: 20px;
     background-color: #dad2d24d;
-    --bar-height: 20%;
     --shadow: rgb(143, 7, 7);
-    box-shadow:inset 0 0 18px black;
+    box-shadow: inset 0 0 18px black;
 
-    --bar-color: linear-gradient(135deg, rgb(245, 52, 52) 0%, rgba(203,21,21,1) 26%, rgba(79,3,3,1) 100%);
-    /*  */
+
+    --bar-height: 20%;
+    --bar-color: linear-gradient(135deg, rgb(245, 52, 52) 0%, rgba(203, 21, 21, 1) 26%, rgba(79, 3, 3, 1) 100%);
 
 }
-#donation-bar::after{
+
+#donation-bar::after {
     content: "";
-    width: 100.5%;
+    width: 100%;
     height: var(--bar-height);
     background: var(--bar-color);
     position: absolute;
-    bottom:-1px;
-    left: -1px;
+    bottom: -1px;
+    left: 0px;
     transition: height 500ms ease, background-color 300ms ease;
     border-radius: 15px;
 
 
 }
-#donation-bar p{
-    margin-top: 40px;
+
+#donation-bar p {
+    padding: 10px;
+    font-size: .9rem;
+
 }
-#options{
+
+#options {
     display: grid;
-    grid-template-columns: repeat(3, 12vw);
-    grid-template-rows: repeat(3, 12vw);
-    grid-gap: 3vw 5vw;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(4, auto);
+    grid-gap: 3vh 0vw;
     width: 60%;
-    height: 100%;
+    margin-top: 10vh;
 }
-.option{
-    width: 100%;
-    height: 100%;
+
+.option {
+    width: 18vw;
+    height: 18vw;
     box-shadow: 0 0 6px black;
     border-radius: 10px;
     text-align: center;
@@ -335,33 +367,168 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    max-width: 170px;
+    max-height: 170px;
 }
 
-
-.option::after{
+.option::after {
     content: var(--quip);
     opacity: 0;
     color: rgba(155, 151, 151, 0.897);
     font-style: italic;
+    font-size: .8rem;
+    margin-left: 10%;
+    margin-right: 10%;
+
 }
-.option:hover::after{
+
+.option:hover::after {
     opacity: 1;
     transition: opacity 500ms 200ms ease;
 
 }
-.option:hover div{
+
+.option:hover div {
     transform: translateY(-30%);
 }
-.option h3{
-    font-size: 1.5rem;
-}
-.option div{
+
+.option div {
     width: 80%;
     transition: transform 500ms ease;
 
 }
 
-#message{
-    grid-row: 3;
-    grid-column: 1 / 4;
+#message {
+    grid-row: 4;
+    grid-column: 1 / 3;
+    padding-right: 10%;
+
 }
+
+@media screen and (min-width: 1200px) {
+
+    #options {
+        grid-template-columns: repeat(3, auto);
+        grid-template-rows: repeat(3, auto);
+    }
+
+    .option {
+        width: 12vw;
+        height: 12vw;
+        max-width: none;
+        max-height: none;
+    }
+
+    #message {
+        grid-row: 3;
+        grid-column: 1 / 4;
+
+    }
+}
+
+@media screen and (min-width: 1700px) {
+    .option h3 {
+        font-size: 1.5rem;
+    }
+
+    .option::after {
+        font-size: 1rem;
+    }
+}
+
+/* just the scoll bar CSS */
+
+#scroll-bar {
+    --height: 80px;
+    position: fixed;
+    height: var(--height);
+    width: 70px;
+    bottom: 10vh;
+    left: 3vw;
+    background-color: salmon;
+    display: flex;
+    justify-content: center;
+    border-radius: 50px;
+    min-height: 80px;
+    box-shadow: inset 0 0 5px black;
+    transform: rotate(0deg);
+    --top: 500px;
+    --shadow: 0 0 0px rgb(153, 75, 67);
+    z-index: 1;
+}
+
+#scroll-bar::after {
+    content: "";
+    width: 100%;
+    height: 10%;
+    position: absolute;
+    z-index: -1;
+    top: var(--top);
+    left: 0;
+    border-radius: 10px;
+    box-shadow: var(--shadow);
+    transition: box-shadow 300ms;
+}
+
+/* #scroll-bar:hover::after {
+    box-shadow: 0 0 10px rgb(153, 75, 67);
+} */
+.arrow {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    box-shadow: 0 0 7px black;
+    background-color: #e9e9e9;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 4rem;
+    cursor: pointer;
+    transition: box-shadow 300ms ease;
+    z-index: 2;
+}
+
+.arrow:hover {
+    box-shadow: 0 0 12px black;
+}
+
+.arrow:hover {
+    box-shadow: 0 0 12px black;
+}
+
+.arrow::after {
+    content: "";
+    border: solid black;
+    border-width: 0 8px 8px 0;
+    display: inline-block;
+    padding: 10px;
+    transform: rotate(var(--rotate));
+    -webkit-transform: rotate(var(--rotate));
+}
+
+#up-arr {
+    top: 0%;
+    z-index: 0;
+}
+
+#down-arr {
+    bottom: 0%;
+    z-index: 2
+}
+
+@media screen and (min-width: 1400px) {
+    #scroll-bar {
+        width: 90px;
+        min-height: 100px;
+        --height: 80px;
+
+    }
+
+    .arrow {
+        width: 100px;
+        height: 100px;
+    }
+}
+
